# threadx-nuvoton-m487

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Core/: gcc_arm.ld
Core/Src/: demo_threadx.c  eth_phy.c  hal_clock.c  main.c  tx_initialize_low_level.S
cmake/: arm-none-eabi-gcc.cmake  m480bsp.cmake
